I fixed some alignmnet issues on mobile and nav on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ nav{
 	justify-content: space-between;
 	align-items: center;
 	padding: 5px;
+	
 
 }
 
@@ -93,12 +94,12 @@ nav a{
 	text-decoration: none;
 	padding: 32px;
 	color: grey;
-	width: 50%;
 }
 
 .links {
 	display: flex;
 	justify-content: space-evenly;
+	width: 100%;
 }
 
 nav a:hover{
@@ -349,8 +350,8 @@ ul li{
     }
 
     .boxes div{
-        width: 300px;
-        height: 350px;
+        width: 270px;
+        height: 390px;
     }
 
     .bottom{
@@ -384,10 +385,14 @@ ul li{
 
     .links a{
         border-top: 1px grey solid;
-        width: 100%;
+        width: 150%;
         margin: 0;
         padding: 4%;
-    }
+	}
+	
+	nav .contact{
+		border-bottom: 1px grey solid;
+	}
 
     nav{
         margin: 0;
@@ -426,15 +431,26 @@ ul li{
 	#services-vision .vision {
 		padding-bottom: 0;
 	}
+
+	.boxes div{
+		width: 100%;
+		height: 60%;
+	}
+	
+	.boxes button{
+		font-size:15px;
+		padding: 5px 10px;
+	}
+
+	.services-header-img{
+		margin-top: 15%;
+	}
+
+	.text-bottom{
+		width: 100%;
+	}
+	
 }
 
-.boxes div{
-    width: 45%;
-    height: 60%;
-}
 
-.boxes button{
-    font-size:15px;
-    padding: 5px 10px;
-}
 
